# BootcampGeneral

./: README.md
2019/: README.md  requirements.txt  test-environment.ipynb
2019/KodyZrodlowe/spotkanie2/: notebook.ipynb
2019/KodyZrodlowe/spotkanie3/: day3-regression-unsupervised.ipynb
2019/KodyZrodlowe/spotkanie4/: notebook.ipynb
2019/KodyZrodlowe/spotkanie5/: Spotkanie5_conv.ipynb  model_1_pretrained_bootcamp.h5
2019/PraceDomowe/praca-domowa-2/: data.csv  pd2-rozwiazania.ipynb  pd2.ipynb
2019/PraceDomowe/praca-domowa-3/: notebook-do-wykonania.ipynb  notebook-rozwiazania.ipynb
2019/PraceDomowe/praca-domowa-4/: PracaDomowa.ipynb
2020/: README.md  requirements.txt
2020/KodyZrodlowe/spotkanie1/: notebook.ipynb
2020/KodyZrodlowe/spotkanie2/: Przykład Regresja (draft, dla ciekawskich).ipynb  spotkanie2.ipynb
2020/KodyZrodlowe/spotkanie3/: notebook.ipynb
2021/: .gitignore  README.md  requirements.txt  test-environment.ipynb
2021/meetings/meeting_01/: meeting_1_homework.ipynb  meeting_1_intro_pandas.ipynb
2021/meetings/meeting_02/: notebook.ipynb  praca_domowa.ipynb
2021/meetings/meeting_03/: .gitignore  classification_notebook.ipynb  home_work.ipynb  hw_solutions.ipynb  (+1 more)
2022/: .gitignore  requirements.txt  test-environment.ipynb
2023/: requirements.txt
2024/: requirements.txt
2024/meetings/: README.md
2024/meetings/3_regresja/: 3_1_simple_regression.ipynb  3_1_simple_regression_runned.ipynb  3_2_fancy_regression.ipynb  3_2_fancy_regression_runned.ipynb  3_3_regression_tree.ipynb  3_3_regression_tree_runned.ipynb  README.md  pyproject.toml
(+59 files in other folders)
